--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <div class="nav-tabs">
             <button class="nav-tab active" onclick="showTab('daily')">일일 관리</button>
             <button class="nav-tab" onclick="showTab('calendar')">달력 보기</button>
-            <button class="nav-tab" onclick="showTab('dashboard')">월별 대시보드</button>
+            <!--button class="nav-tab" onclick="showTab('dashboard')">월별 대시보드</button-->
             <button class="nav-tab" onclick="showTab('missions')">미션 관리</button>
             <button class="nav-tab" onclick="showTab('settlement')">월별 정산</button>
         </div>
